Changes in hypr configs, hyprSetup, waybar and zsh hypr - New keybindings added set-hypr - lsd installation added instead of exa waybar - config icons updated, dark mode style size issue resolved zsh - kitty ssh kitten added, TERMINAL environment variable now automatically sets instead of previous hard coded Alacritty

--- a/.config/waybar/style/style-dark.css
+++ b/.config/waybar/style/style-dark.css
@@ -77,7 +77,7 @@ tooltip label{
     background: #3C486B;
     opacity: 0.8;
     padding: 0px 10px;
-    margin: 3px 0px;
+    margin: 9px 0px;
     /*margin-top: 10px;*/
     border: 0px;
 }
